[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "youth-policy-mcp"
version = "0.1.0"
description = "FastMCP HTTP server for Ontong Youth Center policy Open API"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.27,<2",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

